# pyusacycling

./: .gitignore  LICENSE  MANIFEST.in  README.md  description.md  plan.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: labeler.yml  publish.yml  test.yml  version-bump.yml
pyusacycling/: __init__.py  cli.py  client.py  exceptions.py  models.py  parser.py  test1.py
scripts/: build_package.sh
src/usac_velodata/: __init__.py  __main__.py  cli.py  client.py  models.py  parser.py  serializers.py  utils.py
tests/: test_base_parser.py  test_caching.py  test_cli.py  test_client.py  test_csv_serializer.py  test_event_details_parser.py  test_event_list_parser.py  test_exceptions.py  test_flyer_fetcher.py  test_json_serializer.py  test_logging.py  test_race_results_parser.py  test_rate_limiting.py
